frontend/test/should_fail/rhs_007.grg
rule r {
	x:Node;
	y:Node;
	
	x -e:Edge-> y;
	
	modify {
		x -f:Edge<e>-> y;
		delete(e);
	}
}